--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@fortawesome/fontawesome-svg-core": "^6.1.1",
+		"@fortawesome/free-regular-svg-icons": "^6.1.1",
+		"@fortawesome/free-solid-svg-icons": "^6.1.1",
+		"@fortawesome/react-fontawesome": "^0.1.18",
+		"@mui/icons-material": "^5.8.4",
+		"@mui/material": "^5.8.5",
+		"@mui/styled-engine-sc": "^5.8.0",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"babel-plugin-macros": "^3.1.0",
 		"bootstrap": "^5.1.3",
 		"bootstrap-icons": "^1.8.3",
 		"node-sass": "^7.0.1",
@@ -14,6 +24,7 @@
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
