add rules & setup dependencies for formatting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,17 @@
 {
     "env": {
         "browser": true,
+        "node": true,
         "es2021": true,
         "jest": true
     },
     "extends": [
-        "react-app",
-        "react-app/jest",
         "airbnb",
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:jest/recommended",
+        "plugin:jsx-a11y/recommended",
         "plugin:prettier/recommended"
     ],
     "parserOptions": {
@@ -19,21 +23,42 @@
     },
     "plugins": [
         "react",
+        "jsx-a11y",
         "prettier"
     ],
     "rules": {
-        "quotes": [
-            "error",
-            "double",
+        "indent": "off",
+        "no-unused-vars": "warn",
+        "no-empty-function": "warn",
+        "no-underscore-dangle": "off",
+        "no-unused-expressions": "error",
+        "prettier/prettier": "error",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "jsx-a11y/anchor-is-valid": [ 
+            "error", 
             {
-                "avoidEscape": true
+                "components": [ "Link" ],
+                "specialLink": [ "onClick", "to" ],
+                "aspects": [ "noHref" ]
             }
         ],
-        "prettier/prettier": "error",
-        "no-unused-vars": "off",
-        "react/jsx-uses-react": ["off"],
-        "react/react-in-jsx-scope": ["off"],
-        "react/jsx-props-no-spreading": ["warn"],
-        "no-shadow": "off"
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/interactive-supports-focus": "warn",
+        "react/button-has-type": "warn",
+        "react/jsx-uses-react": "off",
+        "react/jsx-filename-extension": "off",
+        "react/react-in-jsx-scope": "off", 
+        "react/jsx-props-no-spreading": "warn",
+        "react/jsx-key": "off",
+        "no-shadow": "off",
+        "no-use-before-define": "warn",
+        "spaced-comment": [
+            "error", 
+            "always", 
+            { 
+                "exceptions": [ "-", "*" ] 
+            }
+        ]
     }
 }
