--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,9 @@
 {
   "printWidth": 80,
   "tabWidth": 2,
-  "useTabs": false,
+  "useTabs": true,
   "semi": true,
   "singleQuote": false,
-  "quoteProps": "as-needed",
   "trailingComma": "all",
   "bracketSpacing": true,
   "arrowParens": "avoid",
