--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"lint": "eslint .",
-		"lint:fix": "eslint --fix .",
+		"lint": "eslint --cache .",
+		"lint:fix": "eslint --cache --fix .",
 		"format:fix": "prettier-eslint --write \"src/**/*.{js,css,html,json}\"",
 		"format:diff": "prettier-eslint --list-different \"src/**/*.{js,css,html,json}\""
 	},
@@ -56,10 +56,11 @@
 		]
 	},
 	"devDependencies": {
-		"eslint": "^8.20.0",
+		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jest": "^26.6.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
