Set CI to false to avoid treating warnings as errors

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,8 @@ jobs:
   build_test:
 
     runs-on: ${{ matrix.os }}
+    env:
+      CI: false
     strategy:
       fail-fast: false
       matrix:
