--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-spinners": "^0.13.4",
 		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
 	},
