--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://Computer-Science-Club-OCC.github.io.git/client",
 	"name": "cs-website",
 	"version": "0.1.0",
 	"private": true,
@@ -32,6 +33,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -69,6 +72,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"gh-pages": "^4.0.0",
 		"prettier": "2.7.1",
 		"prettier-eslint-cli": "^6.0.1"
 	}
