--- a/backend/package.json
+++ b/backend/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "backend for OCC Club website",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest",
-    "lint": "eslint .  --ext .js",
-    "lint-fix": "eslint --fix .  --ext .js",
-    "format:fix": "prettier --write ."
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19"
-  },
-  "devDependencies": {
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.3",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "backend for OCC Club website",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "jest",
+        "lint": "eslint .  --ext .js",
+        "lint-fix": "eslint --fix .  --ext .js",
+        "format:fix": "prettier --write ."
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "mongoose": "^6.5.2",
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^2.0.19"
+    },
+    "devDependencies": {
+        "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jest": "^26.8.3",
+        "eslint-plugin-n": "^15.2.4",
+        "eslint-plugin-promise": "^6.0.0",
+        "jest": "^28.1.3",
+        "prettier": "^2.7.1"
+    }
 }
