--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
 		"babel-plugin-macros": "^3.1.0",
 		"bootstrap": "^5.1.3",
 		"bootstrap-icons": "^1.8.3",
