--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon index.js",
-        "test": "jest",
+        "test": "jest --testEnvironment=node --runInBand --watchAll",
         "lint": "eslint .  --ext .js",
         "lint-fix": "eslint --fix .  --ext .js",
         "format:fix": "prettier --write ."
@@ -29,6 +29,8 @@
         "eslint-plugin-n": "^15.2.4",
         "eslint-plugin-promise": "^6.0.0",
         "jest": "^28.1.3",
-        "prettier": "^2.7.1"
+        "mongodb-memory-server": "^8.9.0",
+        "prettier": "^2.7.1",
+        "supertest": "^6.2.4"
     }
 }
