--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon index.js",
-        "test": "jest --testEnvironment=node --runInBand --watchAll",
+        "test": "jest --runInBand --watchAll",
         "lint": "eslint .  --ext .js",
         "lint-fix": "eslint --fix .  --ext .js",
         "format:fix": "prettier --write ."
