--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -2,12 +2,44 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true,
+        "jest/globals": true
     },
-    "extends": ["standard", "plugin:jest/recommended", "prettier"],
-    "overrides": [],
+    "extends": [
+        "standard",
+        "eslint:recommended",
+        "plugin:promise/recommended",
+        "plugin:jest/recommended",
+        "plugin:prettier/recommended"
+    ],
+    "plugins": ["jest", "prettier"],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+        "prettier/prettier": "error",
+        "no-unused-expressions": "error",
+        "no-unused-vars": "warn",
+        "no-empty-function": "error",
+        "no-underscore-dangle": "off",
+        "promise/always-return": "error",
+        "promise/no-return-wrap": "error",
+        "promise/param-names": "error",
+        "promise/catch-or-return": "error",
+        "promise/no-native": "off",
+        "promise/no-nesting": "warn",
+        "promise/no-promise-in-callback": "warn",
+        "promise/no-callback-in-promise": "warn",
+        "promise/avoid-new": "warn",
+        "promise/no-new-statics": "error",
+        "promise/no-return-in-finally": "warn",
+        "promise/valid-params": "warn",
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
+    }
 }
