--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
     "scripts": {
         "start": "nodemon index.js",
         "test": "jest --runInBand --watchAll",
-        "lint": "eslint .  --ext .js",
+        "lint": "eslint . --ext .js",
         "lint-fix": "eslint --fix .  --ext .js",
-        "format:fix": "prettier --write ."
+        "format:fix": "prettier-eslint --write \"./**/*.{js,json}\"",
+        "format:diff": "prettier-eslint --list-different \"./**/*.{js,json}\""
     },
     "author": "",
     "license": "ISC",
@@ -23,13 +24,13 @@
         "eslint": "^8.22.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard": "^17.0.0",
-        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jest": "^26.8.3",
-        "eslint-plugin-n": "^15.2.4",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.0.0",
         "jest": "^28.1.3",
         "mongodb-memory-server": "^8.9.0",
         "prettier": "^2.7.1",
+        "prettier-eslint-cli": "^7.1.0",
         "supertest": "^6.2.4"
     }
 }
