--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@emotion/styled": "^11.9.3",
 		"@faker-js/faker": "^7.3.0",
 		"@fortawesome/fontawesome-svg-core": "^6.1.1",
+		"@fortawesome/free-brands-svg-icons": "^6.2.0",
 		"@fortawesome/free-regular-svg-icons": "^6.1.1",
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
