--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
 		]
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.12",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^8.5.0",
@@ -77,7 +78,9 @@
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"gh-pages": "^4.0.0",
+		"postcss": "^8.4.17",
 		"prettier": "2.7.1",
-		"prettier-eslint-cli": "^6.0.1"
+		"prettier-eslint-cli": "^6.0.1",
+		"tailwindcss": "^3.1.8"
 	}
 }
