--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
+		"react-error-boundary": "^3.1.4",
 		"react-photoswipe-gallery": "^2.2.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
