--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,6 @@
 		"react-error-boundary": "^3.1.4",
 		"react-photoswipe-gallery": "^2.2.1",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
 		"react-spinners": "^0.13.4",
 		"react-youtube": "^9.0.3",
 		"styled-components": "^5.3.5",
@@ -40,10 +39,9 @@
 	"scripts": {
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
+		"start": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
 		"lint": "eslint --cache .",
 		"lint:fix": "eslint --cache --fix .",
 		"format:fix": "prettier-eslint --write \"src/**/*.{js,css,html,json}\"",
@@ -68,6 +66,7 @@
 		]
 	},
 	"devDependencies": {
+		"@vitejs/plugin-react": "^2.1.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^19.0.4",
@@ -82,6 +81,8 @@
 		"postcss": "^8.4.17",
 		"prettier": "2.7.1",
 		"prettier-eslint-cli": "^6.0.1",
-		"tailwindcss": "^3.1.8"
+		"rollup-plugin-visualizer": "^5.8.3",
+		"tailwindcss": "^3.1.8",
+		"vite": "^3.1.8"
 	}
 }
