--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,7 @@
 		"@mui/icons-material": "^5.8.4",
 		"@mui/material": "^5.8.5",
 		"@mui/styled-engine-sc": "^5.8.0",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
-		"babel-plugin-macros": "^3.1.0",
 		"bootstrap": "^5.1.3",
 		"bootstrap-icons": "^1.8.3",
 		"node-sass": "^7.0.1",
@@ -78,6 +74,7 @@
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"gh-pages": "^4.0.0",
+		"jest": "^29.2.2",
 		"postcss": "^8.4.17",
 		"prettier": "2.7.1",
 		"prettier-eslint-cli": "^6.0.1",
