--- a/client/package.json
+++ b/client/package.json
@@ -80,6 +80,7 @@
 		"prettier-eslint-cli": "^6.0.1",
 		"rollup-plugin-visualizer": "^5.8.3",
 		"tailwindcss": "^3.1.8",
+		"terser": "^5.15.1",
 		"vite": "^3.1.8"
 	}
 }
