minhngo-change-nav-activity-icon

--- a/client/package.json
+++ b/client/package.json
@@ -46,8 +46,8 @@
 		"eject": "react-scripts eject",
 		"lint": "eslint --cache .",
 		"lint:fix": "eslint --cache --fix .",
-		"format:fix": "prettier-eslint --write \"src/**/*.{js,css,html,json}\"",
-		"format:diff": "prettier-eslint --list-different \"src/**/*.{js,css,html,json}\""
+		"format:fix": "prettier-eslint --write \"src/**/*.{js,jsx,css,html,json}\"",
+		"format:diff": "prettier-eslint --list-different \"src/**/*.{js,jsx,css,html,json}\""
 	},
 	"eslintConfig": {
 		"extends": [
