--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 # NOTES: This file will not be included in actual deployment !!
 PORT=8000
 DATABASE_URI=mongodb://localhost:27017/cs_club
+MAGIC_LINK_SECRET=123 
