--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/material": "^5.10.12",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -16,7 +19,7 @@
 		"react-error-boundary": "^3.1.4",
 		"react-photoswipe-gallery": "^2.2.1",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"react-spinners": "^0.13.4",
 		"react-youtube": "^9.0.3",
 		"web-vitals": "^2.1.4"
@@ -30,8 +33,8 @@
 		"eject": "react-scripts eject",
 		"lint": "eslint --cache .",
 		"lint:fix": "eslint --cache --fix .",
-		"format:fix": "prettier-eslint --write \"src/**/*.{js,css,html,json}\"",
-		"format:diff": "prettier-eslint --list-different \"src/**/*.{js,css,html,json}\""
+		"format:fix": "prettier-eslint --write \"src/**/*.{jsx,js,css,html,json}\"",
+		"format:diff": "prettier-eslint --list-different \"src/**/*.{jsx,js,css,html,json}\""
 	},
 	"eslintConfig": {
 		"extends": [
@@ -52,7 +55,6 @@
 		]
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^7.6.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^19.0.4",
