--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # NOTES: This file will not be included in actual deployment !!
 PORT=8000
-DATABASE_URI=mongodb://localhost:27017/occ_csc
+MONGO_URL=mongodb://localhost:27017/occ_csc
 MAGIC_LINK_SECRET=123 
