--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.19",
         "uuid": "^9.0.0",
-        "validator": "^13.7.0"
+        "validator": "^13.7.0",
         "passport": "^0.6.0",
         "passport-magic-login": "^1.2.0"
     },
